--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "smart-form",
   "version": "0.1.0",
-  "private": true,
+  "main": "dist/app.js",
+  "author": "seawen",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
